--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,12 @@
+<ul>
+  <li>
+    <a routerLink="/home">Home</a>
+  </li>
+  <li>
+    <a routerLink="/aboutus">About Us</a>
+  </li>
+  <li>
+    <a routerLink="/contactus">Contact Us</a>
+  </li>
+</ul>
 <router-outlet></router-outlet>
