--- a/src/app/authentication/authentication.component.html
+++ b/src/app/authentication/authentication.component.html
@@ -1,4 +1,20 @@
-<div>
+<form>
 
-  <button mat-button>Basic</button>
-</div>
+  <div class="input">
+    <label>Username</label>
+    <input type="text" name="username" ngModel="username">
+
+  </div>
+
+  <div>
+    <label>Password</label>
+    <input type="password" name="password" ngModel="password">
+  </div>
+
+  <div>
+    <input type="submit" value="login" (click)="LoginUser()">
+  </div>
+
+</form>
+
+
